 + New call: GetVampiric(): Returns true if vampirism is currently active
 + New call: GetLaserSight(): Returns true if laser sight (as utility) is currenctly active (ignoring sniper rifle)
 + New call: IsHogHidden(gear): Returns true if hog is hidden
 + Changed call: AddTeam: 2nd param. color: Accepts negative value to use a default clan color from player settings
 + Change callback: onGearResurrect: 2nd parameter for visual gear spawned at resurrect position (might be nil)
 + New parameter: SetAmmoTexts: 5th param. showExtra: Set to false to hide texts like “Not yet available”
 + New parameter: ShowMission: 6th param. forceDisplay: Set to true to prevent this particular mission panel to be hidden manually by player
 + New Lua library: Achievements
 + Add sprite tint globals in Utilts library: U_LAND_TINT_NORMAL, U_LAND_TINT_ICE, U_LAND_TINT_INDESTRUCTIBLE and U_LAND_TINT_BOUNCY
 + Can enable infinite fly time for jetpack/Birdy by setting health to JETPACK_FUEL_INFINITE or BIRDY_ENERGY_INFINITE, respectively
 + New global game variable: MaxCaseDrops. Max. number of crats which can be in game by crate drops
 + New global: NoPointX. Value of CursorX and CursorY if cursor is inactive
 + New global: AMMO_INFINITE. Value for infinite ammo count for AddAmmo and other functions
 + New global: cMaxHogHealth. Maximum possible hedgehog health
 + New global: cMaxTurnTime. Maximum possible turn time
 + New global: EXPLForceDraw. Flag for Explode function, forces land removal even with gfSolidLand on
 + New globals: capcolDefault, capcolSetting: Default caption colors
 * Animate library: Remove defunct follow argument for AnimVisualGear
 * Changed global: lfCurrentHog becomes lfCurHogCrate
 * Fixed variable: TotalRounds was -1 (instead of 0) in first real round after hog placement phase
 * AI sometimes intentionally shot hedgehogs with aihDoesntMatter set

====================== 0.9.24.1 ====================